Fix overlapping hint message

--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,7 @@ h1 {
 .guide-buttons {
   display: flex;
   justify-content: space-around;
+  padding: 0 10px 0 10px;
 }
 
 .buttons {
